# cms

./: .eslintignore  .gitignore  Dockerfile  constraints.txt  package-lock.json  package.json  pyproject.toml  setup.py
.agents/skills/local-testing/: SKILL.md
.github/workflows/: main.yml
cms/: conf.py
cms/db/: __init__.py  archived_attendance.py  archived_student_ranking.py  base.py  contest.py  contest_folder.py  modelsolution.py  scorecache.py  session.py  statementview.py  student.py  student_task.py  submission.py  task.py  training_day.py  training_day_group.py  training_program.py  user.py  usertest.py  util.py
cms/grading/: Job.py  ParameterTypes.py  languagemanager.py  scorecache.py  scoring.py  subtask_validation.py
cms/grading/languages/: cpp11_gpp.py  cpp14_gpp.py  cpp17_gpp.py  cpp20_gpp.py  cpp_gpp.py
cms/grading/scoretypes/: Sum.py  abc.py
cms/grading/steps/: __init__.py  realprecision.py  trusted.py
cms/grading/tasktypes/: Batch.py  BatchAndOutput.py  Communication.py  OutputOnly.py  TwoSteps.py  util.py
cms/io/: triggeredservice.py
cms/locale/: cms.pot
cms/locale/he/LC_MESSAGES/: cms.po
cms/server/: jinja2_toolbox.py  picture_utils.py  util.py
cms/server/admin/: jinja2_toolbox.py  rpc_authorization.py  server.py
cms/server/admin/handlers/: __init__.py  admin.py  analysis.py  announcement.py  archive.py  base.py  contest.py  contestannouncement.py  contestdelayrequest.py  contestquestion.py  contestranking.py  contestsubmission.py  contesttask.py  contestuser.py  dataset.py  email.py  excel.py  export_handlers.py  folder.py  import_contest_as_td.py  import_handlers.py  import_td_from_csv.py  main.py  modelsolution.py  question.py  student.py  studenttask.py  submission.py  submissiondownload.py  subtask_validators.py  task.py  taskimportexport.py  training_analytics.py  training_program.py  training_program_submissions.py  training_program_task.py  training_program_user.py  trainingday.py  trainingprogram.py  trainingprogramtask.py  (+3 more)
cms/server/admin/static/: admin_modals.js  aws_form_utils.js  aws_modern.css  aws_style.css  aws_table_utils.js  aws_themes.css  aws_tp_styles.css  aws_utils.js  training_program.js
cms/server/admin/templates/: activate_dataset.html  add_admin.html  add_attachment.html  add_contest.html  add_dataset.html  add_folder.html  add_generator.html  add_manager.html  add_model_solution.html  add_statement.html  add_testcase.html  add_testcases.html  add_training_day.html  add_training_program.html  add_user.html  admin.html  admins.html  announcement.html  announcements.html  archive_training_day.html  base.html  bulk_assign_task.html  configure_model_solutions.html  contest.html  contest_remove.html  contest_submissions.html  contest_tasks.html  contest_users.html  contests.html  dataset.html  delays_and_extra_times.html  edit_generator.html  edit_model_solution.html  error.html  export_task.html  folder.html  folder_remove.html  folders.html  generate_testcases.html  import_contest.html  (+54 more)
cms/server/contest/: communication.py  phase_management.py  server.py  tokening.py
cms/server/contest/handlers/: __init__.py  api.py  base.py  contest.py  delayrequest.py  main.py  task.py  tasksubmission.py  taskusertest.py  trainingprogram.py
cms/server/contest/static/: cws_style.css  cws_utils.js  training_countdown.js  training_day_cards.css
cms/server/contest/submission/: check.py  workflow.py
cms/server/contest/templates/: communication.html  contest.html  error.html  folder_browse.html  overview.html  password_reset_confirm.html  password_reset_invalid.html  password_reset_pending.html  password_reset_request.html  password_reset_request_sent.html  register.html  task_description.html  task_submissions.html  test_interface.html  training_days.html  training_program_overview.html  translation.html
cms/service/: EvaluationService.py  ProxyService.py  ScoringService.py  esoperations.py
cmscommon/: crypto.py  datetime.py  importers.py  testcases.py  zip.py
cmscontrib/: AddTestcases.py  DumpExporter.py  DumpImporter.py  ImportContest.py  ImportTask.py  SpoolExporter.py  TaskExporter.py  importing.py
cmscontrib/loaders/: __init__.py  base_loader.py  cms_task_dump.py  italy_yaml.py
cmscontrib/updaters/: update_47.py  update_47.sql  update_48.py  update_49.py  update_50.py  update_from_1.5.sql
cmsranking/static/: HistoryStore.js  UserDetail.js
cmstestsuite/: Test.py  Tests.py  functionaltestframework.py  testrunner.py
cmstestsuite/tasks/batch_comparator_cpp/: __init__.py
cmstestsuite/tasks/batch_comparator_cpp/code/: checker.cpp
cmstestsuite/tasks/communication_stdio_cpp/: __init__.py
cmstestsuite/tasks/communication_stdio_cpp/code/: manager.cpp
cmstestsuite/tasks/communication_stdio_cpp/data/: 1.out  2.out
cmstestsuite/tasks/outputonly_comparator_cpp/: __init__.py
cmstestsuite/unit_tests/cmscontrib/: AddSubmissionTest.py  ImportContestFolderTest.py
cmstestsuite/unit_tests/db/: contest_folder_test.py  training_program_test.py
cmstestsuite/unit_tests/grading/: scorecache_test.py
cmstestsuite/unit_tests/grading/scoretypes/: scoretypetestutils.py
cmstestsuite/unit_tests/grading/steps/: realprecision_test.py  trusted_test.py
cmstestsuite/unit_tests/grading/tasktypes/: BatchTest.py  CommunicationTest.py  OutputOnlyTest.py  RealPrecisionExponentTest.py
cmstestsuite/web/: CWSRequests.py  __init__.py
config/: cms.sample.toml
docker/: cms-dev.sh
(+70 files in other folders)
